[package]
name = "rj"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["sanmu <578595193@qq.com>"]
#include = ["src/**/*.rs", "README.md"]
readme = "./README.md"
repository = "https://github.com/cargo-crates/rjson"
categories = ["data"]
keywords = ["reactive", "observer", "watch", "computed"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
# tracing = "0.1"
# tracing-subscriber = "0.3"

lazy_static = "1.4"
once_cell = "1.15"
serde_json = "1.0"
regex = "1.5"

weak-table = "0.3.2"
debounce = "0.2"